crates/solidity/testing/snapshots/bindings_output/enums/decls/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected ContractKeyword or ImportKeyword or InterfaceKeyword or LibraryKeyword or PragmaKeyword.
    ╭─[input.sol:13:1]
    │
 13 │ enum ActionChoices { GoLeft, GoRight, GoStraight, SitStill }
    │ ──────────────────────────────┬──────────────────────────────  
    │                               ╰──────────────────────────────── Error occurred here.
────╯
References and definitions: 
    ╭─[input.sol:1:1]
    │
  1 │ contract Test {
    │          ──┬─  
    │            ╰─── def: 1
  2 │     enum Answer { Yes, No }
    │          ───┬──   ─┬─  ─┬  
    │             ╰────────────── def: 2
    │                    │    │  
    │                    ╰─────── def: 3
    │                         │  
    │                         ╰── def: 4
    │ 
  5 │ library LibTest {
    │         ───┬───  
    │            ╰───── def: 5
  6 │     enum Respuesta { Si, No }
    │          ────┬────   ─┬  ─┬  
    │              ╰─────────────── def: 6
    │                       │   │  
    │                       ╰────── def: 7
    │                           │  
    │                           ╰── def: 8
    │ 
  9 │ interface Iface {
    │           ──┬──  
    │             ╰──── def: 9
 10 │     enum Repondre { Oui, Non }
    │          ────┬───   ─┬─  ─┬─  
    │              ╰──────────────── def: 10
    │                      │    │   
    │                      ╰──────── def: 11
    │                           │   
    │                           ╰─── def: 12
────╯
Definiens: 
    ╭─[input.sol:1:1]
    │
  1 │     ╭─▶ contract Test {
  2 │     │       enum Answer { Yes, No }
    │     │   ──────────────┬────┬────┬───  
    │     │                 ╰─────────────── definiens: 2
    │     │                      │    │     
    │     │                      ╰────────── definiens: 3
    │     │                           │     
    │     │                           ╰───── definiens: 4
  3 │   │ ├─▶ }
    │   │ │       
    │   │ ╰─────── definiens: 1
  4 │   ╭───▶ 
    ┆   ┆     
  6 │   │         enum Respuesta { Si, No }
    │   │     ───────────────┬──────┬───┬───  
    │   │                    ╰──────────────── definiens: 6
    │   │                           │   │     
    │   │                           ╰───────── definiens: 7
    │   │                               │     
    │   │                               ╰───── definiens: 8
  7 │ │ ├───▶ }
    │ │ │         
    │ │ ╰───────── definiens: 5
  8 │ ╭─────▶ 
    ┆ ┆       
 10 │ │           enum Repondre { Oui, Non }
    │ │       ───────────────┬─────┬────┬────  
    │ │                      ╰───────────────── definiens: 10
    │ │                            │    │      
    │ │                            ╰─────────── definiens: 11
    │ │                                 │      
    │ │                                 ╰────── definiens: 12
 11 │ ├─────▶ }
    │ │           
    │ ╰─────────── definiens: 9
────╯
